<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ScenarioMenu">

    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="70dp"
            android:text="@string/ScenarioTitle"
            android:textSize="50dp"
            android:textAlignment="center"
            android:id="@+id/ScenarioText"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Scen1"
            android:id="@+id/buttonSlow"
            android:layout_below="@+id/ScenarioText"
            android:layout_marginTop="90dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:tag="1"
            android:onClick="onClick"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Scen2"
            android:id="@+id/buttonNormal"
            android:layout_below="@+id/buttonSlow"
            android:layout_centerHorizontal="true"
            android:tag="2"
            android:onClick="onClick"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Scen3"
            android:id="@+id/buttonFast"
            android:layout_below="@+id/buttonNormal"
            android:layout_centerHorizontal="true"
            android:tag="3"
            android:onClick="onClick"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>
    </FrameLayout>
</FrameLayout>